--- a/company/specification/pom.xml
+++ b/company/specification/pom.xml
@@ -15,11 +15,13 @@
 			<artifactId>springdoc-openapi-ui</artifactId>
 			<version>1.5.2</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/javax.validation/validation-api -->
 		<dependency>
 			<groupId>javax.validation</groupId>
 			<artifactId>validation-api</artifactId>
-			<version>2.1.0.Final</version>
+			<version>2.0.1.Final</version>
 		</dependency>
+
 		<dependency>
 			<groupId>org.openapitools</groupId>
 			<artifactId>jackson-databind-nullable</artifactId>
@@ -33,6 +35,7 @@
 		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-jpa</artifactId>
+			<version>2.1.10.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -60,7 +63,7 @@
 								<interfaceOnly>true</interfaceOnly>
 								<useTags>true</useTags>
 							</configOptions>
-							<output>${project.basedir}/src/main/java/</output>
+							<output>${project.basedir}</output>
 						</configuration>
 					</execution>
 				</executions>
@@ -76,6 +79,6 @@
 				</configuration>
 			</plugin>
 		</plugins>
-		<outputDirectory>src/main/java</outputDirectory>
+		<!-- <outputDirectory>${project.basedir}/src/main/java</outputDirectory> -->
 	</build>
 </project>
