--- a/company/specification/pom.xml
+++ b/company/specification/pom.xml
@@ -7,7 +7,7 @@
 		<artifactId>company</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
-	<artifactId>specification</artifactId>
+	<artifactId>company-specification</artifactId>
 
 	<dependencies>
 		<dependency>
