--- a/stock/application/src/main/resources/application.yaml
+++ b/stock/application/src/main/resources/application.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8081
+  port: 8082
   #ssl:
    # key-store: classpath:stock.jks
     #key-store-password: password
@@ -23,7 +23,7 @@ spring:
     generate-ddl: true
     show-sql: true
   application:
-    name: COMPANY-SERVICE
+    name: COMPANY-STOCK
   kafka:
     producer:
       bootstrap-servers: localhost:9092
