--- a/company/specification/src/main/resources/api.yaml
+++ b/company/specification/src/main/resources/api.yaml
@@ -4,7 +4,7 @@ info:
   description: "Register company in stock market"
   version: "0.0.1-SNAPSHOT"
 servers:
-  - url: "https://localhost:8443"
+  - url: "https://localhost:8081"
     description: "Development server"
 paths:
   /api/v1.0/login:
@@ -28,6 +28,80 @@ paths:
               schema:
                 type: object
                 $ref: '#/components/schemas/Token'
+  /api/v1.0/market/company/register:
+    post:
+      summary: Register a new company
+      operationId: createCompany
+      tags:
+        - Company
+      requestBody:
+        description: Company payload
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: '#/components/schemas/Company'
+        required: true
+      responses:
+        '200':
+          description: Company succesfully registered
+          content:
+            text/plain:
+              schema:
+                type: string
+  /api/v1.0/market/company/info/{companyCode}:
+    get:
+      summary: Get company information by its code
+      operationId: getCompanyByCode
+      tags:
+        - Company
+      parameters:
+        - name: companyCode
+          in: path
+          description: 'To get company information need company code'
+          required: true
+          schema: 
+            type: string
+      responses:
+        '200':
+          description: 'Company details reterived successfully'
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/Company'
+  /api/v1.0/market/company/getall:
+    get:
+      summary: Get companies
+      operationId: getCompanies
+      tags:
+        - Company
+      responses:
+        '200':
+          description: 'Company details reterived successfully'
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  $ref: '#/components/schemas/Company'
+  /api/v1.0/market/company/delete/{companyCode}:
+    delete:
+      summary: Delete company information by its code
+      operationId: deleteCompanyByCode
+      tags:
+        - Company
+      parameters:
+        - name: companyCode
+          in: path
+          description: 'To get company information need company code'
+          required: true
+          schema: 
+            type: string
+      responses:
+        '200':
+          description: 'Company deleted successfully'                                
 components:
   schemas:
     Credentials:
@@ -45,3 +119,52 @@ components:
       properties:
         token:
           type: string
+    Company:
+      type: object
+      required:
+        - code
+        - name
+        - ceo
+        - turnover
+        - website
+        - stockExchange
+      properties:
+        id:
+          type: integer
+        code:
+          type: string
+        name:
+          type: string
+        ceo:
+          type: string
+        turnover:
+          type: integer
+          minimum: 100000000
+          example: 100000000
+        website:
+          type: string
+        stockExchange:
+          type: string
+        stockPrice:
+          type: object
+          $ref: '#/components/schema/StockPrice'
+    StockPrice:
+      type: object
+      required:
+        - stockPrice
+        - startDate
+        - endDate
+      properties:
+        id:
+          type: integer
+        stockPrice:
+          type: float
+        startDate:
+          type: string
+          format: date
+          example: "2021-01-30"  
+        endDate:
+          type: string
+          format: date
+          example: "2021-01-30" 
+         
