--- a/stock/application/src/main/resources/application.yaml
+++ b/stock/application/src/main/resources/application.yaml
@@ -23,7 +23,7 @@ spring:
     generate-ddl: true
     show-sql: true
   application:
-    name: COMPANY-STOCK
+    name: STOCK-SERVICE
   kafka:
     producer:
       bootstrap-servers: localhost:9092
