Added groupid and version for all poms

--- a/stock/application/pom.xml
+++ b/stock/application/pom.xml
@@ -8,6 +8,7 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
+	<groupId>com.stocklisting</groupId>
 	<artifactId>stock-application</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
